# RemoteSignalSlot

./: CMakeLists.txt
include/: ConsumerManager.h  NetworkManager.h  ReflexManager.h  SignalEnclosure.h  SignalSlot.h  SlotEnclosure.h  utils.h
src/: ConsumerManager.cpp  NetworkManager.cpp  ReflexManager.cpp  SignalEnclosure.cpp  SlotEnclosure.cpp  utils.cpp
test/: main.cpp  testAny.cpp  testGenerateID.cpp  testTypeid.cpp
